base/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    application: petclinic
  name: petclinic
spec:
  replicas: 1
  selector:
    deploymentConfig: petclinic
    application: petclinic
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        application: petclinic
        deploymentConfig: petclinic
      name: petclinic
    spec:
      containers:
      - env: []
        image: petclinic
        imagePullPolicy: Always
        name: petclinic
        ports:
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
      terminationGracePeriodSeconds: 75
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - petclinic
      from:
        kind: ImageStreamTag
        name: petclinic:latest
    type: ImageChange
  - type: ConfigChange
