base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The application's http port.
  labels:
    application: petclinic
  name: petclinic
spec:
  selector:
    deploymentConfig: petclinic
  ports:
  - name: 8080-tcp
    port: 8080
    targetPort: 8080
